preparing new release

--- a/doc/packageVignette/UBL.bib
+++ b/doc/packageVignette/UBL.bib
@@ -297,7 +297,7 @@
 }
 
 
-  @Article{rf,
+@Article{rf,
     title = {Classification and Regression by randomForest},
     author = {A. Liaw and M. Wiener},
     journal = {R News},
@@ -305,4 +305,36 @@
     volume = {2},
     number = {3},
     pages = {18-22}
+  }
+
+@phdthesis{ribeiro2011utility,
+  title={Utility-based regression},
+  author={Ribeiro, R},
+  year={2011},
+  school={PhD thesis, Dep. Computer Science, Faculty of Sciences-University of Porto}
+}
+
+@article{branco2015survey,
+  title={A survey of predictive modelling under imbalanced distributions},
+  author={Branco, Paula and Torgo, Luis and Ribeiro, Rita},
+  journal={arXiv preprint arXiv:1505.01658},
+  year={2015}
+}
+
+
+@incollection{torgo2007utility,
+  title={Utility-based regression},
+  author={Torgo, Luis and Ribeiro, Rita},
+  booktitle={Knowledge Discovery in Databases: PKDD 2007},
+  pages={597--604},
+  year={2007},
+  publisher={Springer}
+}
+
+
+  @Manual{uba,
+    title = {uba: Utility-based Algorithms},
+    author = {Rita P. Ribeiro and with contributions from Luis Torgo.},
+    year = {2014},
+    note = {R package version 0.7.5},
   }
